k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: energy-forecast-api
  labels:
    app.kubernetes.io/name: energy-forecast-api
    app.kubernetes.io/component: inference
    app.kubernetes.io/part-of: energy-demand-forecasting-devmlops
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: energy-forecast-api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
